前后端项目结构更新

--- a/docs/技术栈说明.md
+++ b/docs/技术栈说明.md
@@ -3,79 +3,212 @@
 ## 前端技术栈
 
 ### 核心框架和语言
-- Vue 3.3.0 - 渐进式 JavaScript 框架
-- TypeScript 5.2.0 - JavaScript 的超集，添加了类型系统
-- Vite 5.0.0 - 新一代前端构建工具
+```
+核心框架
+├── Vue 3.3.0
+│   ├── 组合式API
+│   ├── 响应式系统
+│   ├── 生命周期钩子
+│   └── 依赖注入
+├── TypeScript 5.2.0
+│   ├── 类型系统
+│   ├── 接口定义
+│   ├── 泛型支持
+│   └── 装饰器
+└── Element Plus 2.4.0
+    ├── 组件库
+    ├── 主题定制
+    ├── 国际化
+    └── 表单验证
+```
+
+### 工程化工具
+```
+工程化工具
+├── Vite 5.0.0（构建工具）
+│   ├── 快速热重载
+│   ├── 按需编译
+│   ├── 插件系统
+│   └── 构建优化
+├── ESLint（代码检查）
+│   ├── 代码规范
+│   ├── 错误检测
+│   ├── 自动修复
+│   └── 插件扩展
+└── Prettier（代码格式化）
+    ├── 统一风格
+    ├── 自动格式化
+    ├── 编辑器集成
+    └── 配置共享
+```
 
 ### 路由和状态管理
-- Vue Router 4.2.5 - Vue.js 的官方路由
-- Pinia 2.1.0 - Vue 的状态管理库
+```
+状态管理
+├── Pinia 2.1.0
+│   ├── 状态定义
+│   ├── 计算属性
+│   ├── 异步操作
+│   └── 持久化
+└── Vue Router 4.2.5
+    ├── 路由配置
+    ├── 导航守卫
+    ├── 路由懒加载
+    └── 过渡动画
+```
 
-### UI 组件和样式
-- Element Plus 2.4.0 - 基于 Vue 3 的组件库
-- Sass 1.69.0 - CSS 预处理器
-
-### 工具库
-- Axios 1.6.0 - HTTP 客户端
-- dayjs - 轻量级日期处理库
-- ECharts - 数据可视化图表库
-
-### 开发工具
-- ESLint - 代码质量检查
-- Prettier - 代码格式化工具
-- TypeScript ESLint - TypeScript 的 ESLint 插件
-- Vitest - 单元测试框架
-- Cypress - E2E 测试框架
+### 测试工具
+```
+测试工具
+├── Vitest（单元测试）
+│   ├── 组件测试
+│   ├── 快照测试
+│   ├── 覆盖率报告
+│   └── 模拟数据
+└── Cypress（E2E测试）
+    ├── 浏览器自动化
+    ├── 网络请求模拟
+    ├── 测试录制
+    └── 并行执行
+```
 
 ## 后端技术栈
 
 ### 核心框架
-- Spring Cloud - 微服务框架
-- Spring Boot 3.2.0 - 应用开发框架
-- Spring Security - 安全框架
-- Spring Data JPA - 数据访问层框架
+```
+Spring Cloud 微服务
+├── Spring Boot 3.2.0（基础框架）
+│   ├── 依赖注入和控制反转
+│   ├── 自动配置
+│   ├── 内嵌Web服务器
+│   └── 健康检查和监控
+├── Spring Cloud Gateway（网关服务）
+│   ├── 路由转发
+│   ├── 负载均衡
+│   ├── 请求限流
+│   └── 安全过滤
+├── Spring Security + JWT（认证授权）
+│   ├── 基于角色的访问控制
+│   ├── OAuth2认证
+│   ├── JWT令牌管理
+│   └── 密码加密
+├── Spring Cloud Config（配置中心）
+│   ├── 集中配置管理
+│   ├── 配置版本控制
+│   ├── 动态配置更新
+│   └── 环境隔离
+└── Spring Cloud Netflix（服务发现）
+    ├── Eureka服务注册
+    ├── 服务健康检查
+    ├── 服务负载均衡
+    └── 服务熔断降级
+```
 
 ### 数据库和缓存
-- MySQL 8.0 - 关系型数据库
-- Redis 6.2 - 缓存数据库
-- Elasticsearch - 全文搜索引擎
+```
+数据存储与缓存
+├── MySQL 8.0（关系型数据库）
+│   ├── 事务管理
+│   ├── 数据分区
+│   ├── 索引优化
+│   └── 主从复制
+├── Redis 6.2（缓存服务）
+│   ├── 数据缓存
+│   ├── 会话管理
+│   ├── 分布式锁
+│   └── 消息订阅
+├── MinIO（对象存储）
+│   ├── 文件存储
+│   ├── 版本控制
+│   ├── 访问控制
+│   └── 数据加密
+└── MyBatis-Plus/JPA（ORM框架）
+    ├── 对象关系映射
+    ├── 动态SQL
+    ├── 代码生成
+    └── 插件扩展
+```
 
-### 消息队列
-- RabbitMQ - 消息队列中间件
-
-### 微服务组件
-- Spring Cloud Gateway - API 网关
-- Spring Cloud Config - 配置中心
-- Spring Cloud Eureka - 服务注册与发现
-- Spring Cloud OpenFeign - 声明式 REST 客户端
-- Spring Cloud Circuit Breaker - 断路器
-- Spring Cloud Sleuth - 分布式追踪
+### 消息与异步
+```
+消息与异步
+├── RabbitMQ 3.9（消息队列）
+│   ├── 消息路由
+│   ├── 死信队列
+│   ├── 延迟消息
+│   └── 消息持久化
+└── WebSocket（实时通信）
+    ├── 双向通信
+    ├── 心跳检测
+    ├── 断线重连
+    └── 消息推送
+```
 
 ### 监控和日志
-- ELK Stack
-  - Elasticsearch - 日志存储和搜索
-  - Logstash - 日志收集和处理
-  - Kibana - 日志可视化
-- Prometheus - 监控系统
-- Grafana - 监控可视化
+```
+监控与日志
+├── ELK Stack（日志收集）
+│   ├── Elasticsearch（日志存储）
+│   ├── Logstash（日志处理）
+│   └── Kibana（日志可视化）
+├── Prometheus（监控系统）
+│   ├── 指标收集
+│   ├── 告警规则
+│   ├── 时序数据库
+│   └── 查询语言
+└── Grafana（可视化面板）
+    ├── 数据源集成
+    ├── 仪表盘定制
+    ├── 告警通知
+    └── 权限管理
+```
 
 ## DevOps 工具链
 
 ### 容器化和编排
-- Docker - 容器化平台
-- Docker Compose - 容器编排工具
+```
+容器化部署
+├── Docker
+│   ├── 镜像构建
+│   ├── 容器管理
+│   ├── 网络配置
+│   └── 数据卷
+└── Docker Compose
+    ├── 服务编排
+    ├── 环境配置
+    ├── 依赖管理
+    └── 资源限制
+```
 
 ### CI/CD
-- GitHub Actions - 持续集成和部署
-- SonarQube - 代码质量管理
+```
+持续集成/部署
+├── GitHub Actions
+│   ├── 工作流定义
+│   ├── 自动化测试
+│   ├── 代码检查
+│   └── 自动部署
+└── Shell Scripts
+    ├── 环境配置
+    ├── 服务启停
+    ├── 日志处理
+    └── 监控脚本
+```
 
-### 版本控制
-- Git - 版本控制系统
-- GitHub - 代码托管平台
-
-### 项目管理
-- GitHub Projects - 项目管理工具
-- GitHub Issues - 问题追踪
+### 自动化运维
+```
+自动化运维
+├── Ansible
+│   ├── 配置管理
+│   ├── 应用部署
+│   ├── 任务编排
+│   └── 资产管理
+└── Jenkins
+    ├── 流水线定义
+    ├── 构建管理
+    ├── 插件扩展
+    └── 权限控制
+```
 
 ## 开发环境要求
 
