--- a/docs/技术栈说明.md
+++ b/docs/技术栈说明.md
@@ -1,239 +1,191 @@
-# 论文评审系统技术栈说明
+# 技术栈说明
 
 ## 前端技术栈
 
-### 核心框架和语言
-```
-核心框架
-├── Vue 3.3.0
-│   ├── 组合式API
-│   ├── 响应式系统
-│   ├── 生命周期钩子
-│   └── 依赖注入
-├── TypeScript 5.2.0
-│   ├── 类型系统
-│   ├── 接口定义
-│   ├── 泛型支持
-│   └── 装饰器
-└── Element Plus 2.4.0
-    ├── 组件库
-    ├── 主题定制
-    ├── 国际化
-    └── 表单验证
-```
+### 核心框架
+- Vue 3.4.x：使用Composition API
+- TypeScript 5.3.x：类型安全
+- Vite 5.0.x：构建工具
 
-### 工程化工具
-```
-工程化工具
-├── Vite 5.0.0（构建工具）
-│   ├── 快速热重载
-│   ├── 按需编译
-│   ├── 插件系统
-│   └── 构建优化
-├── ESLint（代码检查）
-│   ├── 代码规范
-│   ├── 错误检测
-│   ├── 自动修复
-│   └── 插件扩展
-└── Prettier（代码格式化）
-    ├── 统一风格
-    ├── 自动格式化
-    ├── 编辑器集成
-    └── 配置共享
-```
+### UI框架
+- Element Plus 2.5.x：UI组件库
+- TailwindCSS 3.4.x：原子化CSS框架
+- IconPark：图标库
 
-### 路由和状态管理
-```
-状态管理
-├── Pinia 2.1.0
-│   ├── 状态定义
-│   ├── 计算属性
-│   ├── 异步操作
-│   └── 持久化
-└── Vue Router 4.2.5
-    ├── 路由配置
-    ├── 导航守卫
-    ├── 路由懒加载
-    └── 过渡动画
-```
+### 状态管理
+- Pinia 2.1.x：Vue官方状态管理方案
+- VueUse：组合式API工具集
 
-### 测试工具
-```
-测试工具
-├── Vitest（单元测试）
-│   ├── 组件测试
-│   ├── 快照测试
-│   ├── 覆盖率报告
-│   └── 模拟数据
-└── Cypress（E2E测试）
-    ├── 浏览器自动化
-    ├── 网络请求模拟
-    ├── 测试录制
-    └── 并行执行
-```
+### 路由
+- Vue Router 4.2.x：官方路由
+
+### HTTP请求
+- Axios：HTTP客户端
+- VueRequest：请求状态管理
+
+### 工具库
+- Lodash-es：工具函数库
+- Day.js：时间处理
+- PDF.js：PDF预览
+- ECharts：图表库
+
+### 开发工具
+- ESLint：代码检查
+- Prettier：代码格式化
+- Husky：Git hooks
+- Commitlint：提交信息规范
+
+### 测试框架
+- Vitest：单元测试
+- Vue Test Utils：组件测试
+- Cypress：E2E测试
 
 ## 后端技术栈
 
 ### 核心框架
-```
-Spring Cloud 微服务
-├── Spring Boot 3.2.0（基础框架）
-│   ├── 依赖注入和控制反转
-│   ├── 自动配置
-│   ├── 内嵌Web服务器
-│   └── 健康检查和监控
-├── Spring Cloud Gateway（网关服务）
-│   ├── 路由转发
-│   ├── 负载均衡
-│   ├── 请求限流
-│   └── 安全过滤
-├── Spring Security + JWT（认证授权）
-│   ├── 基于角色的访问控制
-│   ├── OAuth2认证
-│   ├── JWT令牌管理
-│   └── 密码加密
-├── Spring Cloud Config（配置中心）
-│   ├── 集中配置管理
-│   ├── 配置版本控制
-│   ├── 动态配置更新
-│   └── 环境隔离
-└── Spring Cloud Netflix（服务发现）
-    ├── Eureka服务注册
-    ├── 服务健康检查
-    ├── 服务负载均衡
-    └── 服务熔断降级
-```
+- Spring Boot 3.2.x：应用框架
+- Spring Cloud 2023.x：微服务框架
+- Spring Cloud Alibaba：微服务生态
 
-### 数据库和缓存
-```
-数据存储与缓存
-├── MySQL 8.0（关系型数据库）
-│   ├── 事务管理
-│   ├── 数据分区
-│   ├── 索引优化
-│   └── 主从复制
-├── Redis 6.2（缓存服务）
-│   ├── 数据缓存
-│   ├── 会话管理
-│   ├── 分布式锁
-│   └── 消息订阅
-├── MinIO（对象存储）
-│   ├── 文件存储
-│   ├── 版本控制
-│   ├── 访问控制
-│   └── 数据加密
-└── MyBatis-Plus/JPA（ORM框架）
-    ├── 对象关系映射
-    ├── 动态SQL
-    ├── 代码生成
-    └── 插件扩展
-```
+### 服务治理
+- Nacos：注册中心和配置中心
+- OpenFeign：服务调用
+- Gateway：API网关
+- Sentinel：限流熔断
 
-### 消息与异步
-```
-消息与异步
-├── RabbitMQ 3.9（消息队列）
-│   ├── 消息路由
-│   ├── 死信队列
-│   ├── 延迟消息
-│   └── 消息持久化
-└── WebSocket（实时通信）
-    ├── 双向通信
-    ├── 心跳检测
-    ├── 断线重连
-    └── 消息推送
-```
+### 数据存储
+- MySQL 8.0：关系型数据库
+- Redis 7.0：缓存数据库
+- MinIO：对象存储
+- Elasticsearch 8.x：搜索引擎
 
-### 监控和日志
-```
-监控与日志
-├── ELK Stack（日志收集）
-│   ├── Elasticsearch（日志存储）
-│   ├── Logstash（日志处理）
-│   └── Kibana（日志可视化）
-├── Prometheus（监控系统）
-│   ├── 指标收集
-│   ├── 告警规则
-│   ├── 时序数据库
-│   └── 查询语言
-└── Grafana（可视化面板）
-    ├── 数据源集成
-    ├── 仪表盘定制
-    ├── 告警通知
-    └── 权限管理
-```
+### 消息队列
+- RabbitMQ 3.12：消息队列
+- Spring AMQP：消息框架
 
-## DevOps 工具链
+### 安全框架
+- Spring Security：安全框架
+- JWT：身份认证
+- Spring OAuth2：授权中心
 
-### 容器化和编排
-```
-容器化部署
-├── Docker
-│   ├── 镜像构建
-│   ├── 容器管理
-│   ├── 网络配置
-│   └── 数据卷
-└── Docker Compose
-    ├── 服务编排
-    ├── 环境配置
-    ├── 依赖管理
-    └── 资源限制
-```
+### ORM框架
+- MyBatis-Plus：ORM框架
+- Dynamic Datasource：动态数据源
+
+### 工具库
+- Hutool：工具类库
+- MapStruct：对象映射
+- Lombok：代码生成
+- Validation：参数校验
+
+### 文档工具
+- Knife4j：接口文档
+- SpringDoc：OpenAPI文档
+
+### 监控日志
+- Spring Boot Admin：应用监控
+- ELK Stack：日志收集分析
+- Prometheus：指标监控
+- Grafana：监控面板
+
+### 测试框架
+- JUnit 5：单元测试
+- Mockito：Mock框架
+- TestContainers：集成测试
+
+## DevOps工具链
+
+### 容器化
+- Docker：容器运行时
+- Docker Compose：容器编排
+- Harbor：镜像仓库
 
 ### CI/CD
-```
-持续集成/部署
-├── GitHub Actions
-│   ├── 工作流定义
-│   ├── 自动化测试
-│   ├── 代码检查
-│   └── 自动部署
-└── Shell Scripts
-    ├── 环境配置
-    ├── 服务启停
-    ├── 日志处理
-    └── 监控脚本
-```
+- GitHub Actions：持续集成
+- Jenkins：持续部署
+- SonarQube：代码质量
 
-### 自动化运维
-```
-自动化运维
-├── Ansible
-│   ├── 配置管理
-│   ├── 应用部署
-│   ├── 任务编排
-│   └── 资产管理
-└── Jenkins
-    ├── 流水线定义
-    ├── 构建管理
-    ├── 插件扩展
-    └── 权限控制
-```
+### 监控告警
+- Prometheus：监控系统
+- Grafana：可视化平台
+- AlertManager：告警管理
 
-## 开发环境要求
+### 日志管理
+- Elasticsearch：日志存储
+- Logstash：日志收集
+- Kibana：日志分析
+- Filebeat：日志采集
 
-### 前端开发
-- Node.js >= 18.0.0
-- npm >= 9.0.0
-- VS Code 推荐插件：
-  - Volar
-  - ESLint
-  - Prettier
-  - TypeScript Vue Plugin
+### 性能测试
+- JMeter：压力测试
+- Gatling：性能测试
+- Arthas：Java诊断工具
 
-### 后端开发
-- JDK 17 或更高版本
-- Maven 3.8+
-- IntelliJ IDEA 推荐插件：
-  - Spring Boot Assistant
-  - Lombok
-  - SonarLint
+## 开发环境
 
-### 数据库环境
-- MySQL 8.0+
-- Redis 6.2+
-- Elasticsearch 7.x
+### IDE
+- IntelliJ IDEA：后端开发
+- Visual Studio Code：前端开发
+- DataGrip：数据库管理
 
-### 容器环境
-- Docker 24.0+
-- Docker Compose 2.x 
+### 开发工具
+- Git：版本控制
+- Maven：构建工具
+- npm：包管理器
+- Postman：接口测试
+
+### 辅助工具
+- DBeaver：数据库客户端
+- Redis Desktop Manager：Redis客户端
+- Portainer：容器管理
+- Navicat：数据库管理
+
+## 项目规范
+
+### 代码规范
+- Alibaba Java Coding Guidelines
+- Vue Style Guide
+- TypeScript规范
+- ESLint配置
+- Prettier配置
+
+### 提交规范
+- Conventional Commits
+- Commitlint配置
+- Git Flow工作流
+- Code Review流程
+
+### 文档规范
+- API文档规范
+- 注释规范
+- README规范
+- 版本说明规范
+
+### 安全规范
+- 密码加密存储
+- 敏感信息加密
+- 权限访问控制
+- 日志脱敏处理
+
+## 版本说明
+
+### 主要依赖版本
+- JDK 21
+- Node.js 20 LTS
+- MySQL 8.0
+- Redis 7.0
+- Elasticsearch 8.11
+- RabbitMQ 3.12
+- Nacos 2.2.3
+- Docker 24.0
+- Nginx 1.24
+
+### 兼容性说明
+- 浏览器支持：
+  - Chrome 120+
+  - Firefox 120+
+  - Safari 17+
+  - Edge 120+
+- 移动端支持：
+  - iOS 15+
+  - Android 11+ 
