--- a/docs/贡献指南.md
+++ b/docs/贡献指南.md
@@ -1,343 +1,288 @@
 # 贡献指南
 
-## 1. 开始之前
+## 目录
+- [行为准则](#行为准则)
+- [如何贡献](#如何贡献)
+- [开发流程](#开发流程)
+- [提交规范](#提交规范)
+- [代码审查](#代码审查)
+- [版本发布](#版本发布)
+- [问题反馈](#问题反馈)
 
-### 1.1 行为准则
-- 尊重所有项目参与者
-- 保持专业和友好的交流
+## 行为准则
+
+### 1. 基本原则
+- 尊重所有贡献者
+- 保持专业和友善的交流
 - 接受建设性的批评
-- 关注项目的整体利益
+- 关注问题本身而不是个人
 
-### 1.2 技术要求
-- 熟悉 Java 和 Spring 生态
-- 了解 Vue 3 和 TypeScript
-- 掌握 Git 基本操作
-- 理解微服务架构
+### 2. 沟通准则
+- 使用清晰和专业的语言
+- 提供详细的上下文信息
+- 及时响应他人的问题
+- 避免无意义的争论
 
-## 2. 开发环境搭建
+## 如何贡献
 
-### 2.1 必要软件
-- JDK 21（Eclipse Temurin）
-- Maven 3.9.10
-- Node.js 16.x
-- Git
-- IDE
-  - 后端：IntelliJ IDEA 2023.3+
-  - 前端：Visual Studio Code
+### 1. 准备工作
+1. Fork 项目仓库
+2. 克隆你的 Fork 到本地：
+   ```bash
+   git clone https://github.com/YOUR_USERNAME/-reab0t-A-paper-review-system.git
+   ```
+3. 添加上游仓库：
+   ```bash
+   git remote add upstream https://github.com/reab0t/-reab0t-A-paper-review-system.git
+   ```
 
-### 2.2 推荐插件
-- IntelliJ IDEA
-  - Lombok
-  - MapStruct Support
-  - SonarLint
-  - Spring Boot Assistant
-  
-- VS Code
-  - Volar
-  - ESLint
-  - Prettier
-  - TypeScript Vue Plugin
+### 2. 开发环境
+- JDK 21
+- Maven 3.9+
+- Node.js 20+
+- Docker Desktop
+- IDE：IntelliJ IDEA 或 VS Code
 
-### 2.3 环境配置
-1. 克隆项目
+### 3. 项目设置
+1. 安装依赖：
+   ```bash
+   # 后端
+   cd backend
+   mvn clean install
+
+   # 前端
+   cd frontend
+   npm install
+   ```
+
+2. 启动服务：
+   ```bash
+   # 启动基础服务
+   docker-compose up -d
+
+   # 启动后端服务
+   cd backend
+   mvn spring-boot:run
+
+   # 启动前端服务
+   cd frontend
+   npm run dev
+   ```
+
+## 开发流程
+
+### 1. 创建分支
 ```bash
-git clone https://github.com/your-org/paper-review-system.git
-cd paper-review-system
+# 更新主分支
+git checkout main
+git pull upstream main
+
+# 创建功能分支
+git checkout -b feature/your-feature-name
 ```
 
-2. 后端配置
+### 2. 开发规范
+- 遵循项目的代码规范
+- 编写单元测试
+- 保持代码简洁清晰
+- 及时同步上游变更
+
+### 3. 提交变更
 ```bash
-# 编译项目
-mvn clean install
+# 检查变更
+git status
+git diff
 
-# 启动服务
-mvn spring-boot:run
-```
-
-3. 前端配置
-```bash
-# 安装依赖
-cd frontend
-npm install
-
-# 启动开发服务器
-npm run dev
-```
-
-## 3. 开发流程
-
-### 3.1 任务领取
-1. 在 Issues 中选择或创建任务
-2. 指派给自己
-3. 创建新分支
-```bash
-git checkout -b feature/xxx
-```
-
-### 3.2 开发规范
-1. 遵循项目代码规范
-2. 编写单元测试
-3. 及时提交代码
-```bash
+# 添加和提交
 git add .
-git commit -m "feat: xxx"
-git push origin feature/xxx
+git commit -m "feat(scope): your commit message"
+
+# 推送到远程
+git push origin feature/your-feature-name
 ```
 
-### 3.3 提交 Pull Request
-1. 确保代码通过测试
-2. 更新变更日志
-3. 创建 Pull Request
-4. 等待代码审查
+## 提交规范
 
-## 4. 代码审查
+### 1. 提交信息格式
+```
+<类型>(<范围>): <描述>
 
-### 4.1 审查重点
+[可选的正文]
+
+[可选的脚注]
+```
+
+### 2. 类型说明
+- feat：新功能
+- fix：修复bug
+- docs：文档更新
+- style：代码格式调整
+- refactor：代码重构
+- test：测试相关
+- chore：构建或工具相关
+
+### 3. 范围说明
+- user：用户模块
+- paper：论文模块
+- review：评审模块
+- common：公共模块
+- docs：文档
+- ci：持续集成
+
+### 4. 示例
+```
+feat(user): 添加用户登录功能
+
+- 实现用户名密码登录
+- 添加JWT token生成
+- 增加登录接口单元测试
+
+Closes #123
+```
+
+## 代码审查
+
+### 1. 提交PR
+1. 在GitHub上创建Pull Request
+2. 填写PR模板：
+   - 描述变更内容
+   - 关联相关Issue
+   - 提供测试说明
+   - 添加注意事项
+
+### 2. 审查清单
 - 代码质量
+  - 遵循代码规范
+  - 代码可读性
+  - 性能考虑
+  - 安全考虑
+
 - 测试覆盖
-- 性能影响
-- 安全隐患
-- 文档完整性
+  - 单元测试
+  - 集成测试
+  - 边界条件
+  - 异常处理
 
-### 4.2 审查流程
-1. 检查代码规范
-2. 运行测试用例
-3. 审查业务逻辑
-4. 提供修改建议
-5. 确认修改后合并
+- 文档完整
+  - 代码注释
+  - API文档
+  - 使用说明
+  - 部署文档
 
-## 5. 文档维护
+### 3. 审查流程
+1. 提交PR后等待审查
+2. 及时响应审查意见
+3. 更新代码并重新提交
+4. 获得批准后合并
 
-### 5.1 文档类型
-- README.md
-- API文档
-- 开发文档
-- 部署文档
-- 使用手册
+## 版本发布
 
-### 5.2 文档规范
-- 使用 Markdown 格式
-- 保持结构清晰
-- 示例代码完整
-- 定期更新维护
+### 1. 版本号规范
+- 主版本号：不兼容的API修改
+- 次版本号：向下兼容的功能性新增
+- 修订号：向下兼容的问题修正
 
-## 6. 版本发布
+### 2. 发布流程
+1. 创建发布分支
+   ```bash
+   git checkout -b release/v1.0.0
+   ```
 
-### 6.1 版本规范
-- 主版本号：重大更新
-- 次版本号：功能更新
-- 修订号：问题修复
+2. 版本准备
+   - 更新版本号
+   - 更新CHANGELOG
+   - 更新文档
 
-### 6.2 发布流程
-1. 更新版本号
-2. 生成变更日志
-3. 打包测试
-4. 创建发布标签
-5. 发布到生产环境
+3. 测试验证
+   - 运行测试套件
+   - 执行集成测试
+   - 验证功能完整性
 
-## 7. 问题反馈
+4. 合并发布
+   ```bash
+   git checkout main
+   git merge release/v1.0.0
+   git tag -a v1.0.0 -m "Release version 1.0.0"
+   git push origin main --tags
+   ```
 
-### 7.1 问题类型
+## 问题反馈
+
+### 1. Issue提交
+- 使用Issue模板
+- 提供详细描述
+- 附加错误日志
+- 提供复现步骤
+
+### 2. 问题类型
 - Bug报告
-- 功能建议
+- 功能请求
+- 文档改进
 - 性能问题
-- 安全漏洞
 
-### 7.2 反馈要求
-- 清晰的问题描述
-- 复现步骤
-- 期望结果
-- 实际结果
-- 相关日志或截图
+### 3. 响应流程
+1. 确认问题
+2. 分配负责人
+3. 制定解决方案
+4. 跟踪进展
+5. 验证解决
 
-## 8. 持续集成
+## 持续集成
 
-### 8.1 CI/CD流程
-1. 代码提交
-2. 自动化测试
-3. 代码质量检查
-4. 构建部署
-5. 自动化测试
-6. 生产发布
+### 1. CI/CD流程
+```yaml
+# GitHub Actions工作流
+name: CI/CD Pipeline
 
-### 8.2 质量要求
-- 测试覆盖率 > 80%
-- 代码重复率 < 3%
-- 无高危漏洞
-- 性能指标达标
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main, develop ]
 
-## 9. 奖励机制
-
-### 9.1 贡献等级
-- 核心贡献者
-- 活跃贡献者
-- 普通贡献者
-- 新手贡献者
-
-### 9.2 奖励方式
-- 荣誉徽章
-- 技术分享
-- 项目推荐
-- 实习机会
-
-## 10. 社区交流
-
-### 10.1 交流渠道
-- GitHub Issues
-- 技术讨论组
-- 邮件列表
-- 在线会议
-
-### 10.2 交流准则
-- 清晰表达
-- 及时响应
-- 互帮互助
-- 分享经验
-
-## 11. 团队协作指南
-
-### 11.1 团队分工
-
-1. **架构组**：靳磊
-   - 架构设计评审
-   - 技术方案审核
-   - 性能优化指导
-   - 代码质量把控
-   - 技术难点攻关
-
-2. **前端组**：傅依琳
-   - 前端架构维护
-   - 组件库开发
-   - 性能优化
-   - UI/UX改进
-   - 前端测试规范
-
-3. **后端组**：赵湄灵、王誉晗
-   - 微服务开发
-   - 数据库设计
-   - 接口开发
-   - 安全控制
-   - 单元测试
-
-4. **运维组**：袁太仙
-   - 部署维护
-   - 监控告警
-   - 性能调优
-   - 安全加固
-   - 自动化运维
-
-### 11.2 协作流程
-
-1. **需求阶段**
-   - 需求评审：靳磊主持
-   - 技术可行性：全体成员参与
-   - 方案设计：对应模块负责人
-   - 任务分配：靳磊协调
-
-2. **开发阶段**
-   - 前端开发：傅依琳负责
-   - 后端开发：赵湄灵、王誉晗负责
-   - 接口联调：全体开发人员
-   - 代码审查：模块负责人
-
-3. **测试阶段**
-   - 单元测试：开发人员
-   - 集成测试：全体成员
-   - 性能测试：袁太仙
-   - 安全测试：赵湄灵
-
-4. **部署阶段**
-   - 环境准备：袁太仙
-   - 部署执行：袁太仙
-   - 监控配置：袁太仙
-   - 问题处理：全体成员
-
-### 11.3 代码提交流程
-
-1. **功能开发**
-```bash
-# 前端开发
-git checkout -b feature/ui-paper-review
-git commit -m "feat(ui): 实现论文评审界面"
-
-# 后端开发
-git checkout -b feature/api-paper-review
-git commit -m "feat(api): 实现论文评审接口"
-
-# 运维开发
-git checkout -b feature/deploy-monitor
-git commit -m "feat(ops): 添加论文服务监控"
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+      - name: Build with Maven
+        run: mvn clean install
 ```
 
-2. **代码审查**
-   - 前端代码：傅依琳审查
-   - 后端代码：赵湄灵或王誉晗审查
-   - 运维代码：袁太仙审查
-   - 架构相关：靳磊审查
+### 2. 质量检查
+- 代码风格检查
+- 单元测试
+- 代码覆盖率
+- 安全扫描
+- 性能测试
 
-3. **合并流程**
-```bash
-# 更新分支
-git checkout develop
-git pull origin develop
-git checkout feature/xxx
-git rebase develop
+### 3. 部署流程
+1. 测试环境部署
+2. 验证功能
+3. 生产环境部署
+4. 监控系统状态
 
-# 解决冲突
-git rebase --continue
+## 文档维护
 
-# 合并请求
-git push origin feature/xxx
-```
+### 1. 文档类型
+- README
+- API文档
+- 使用手册
+- 部署文档
+- 贡献指南
 
-### 11.4 文档维护指南
+### 2. 更新要求
+- 及时更新
+- 保持一致性
+- 版本对应
+- 示例完整
 
-1. **架构文档**：靳磊
-   - 系统架构图更新
-   - 技术方案文档
-   - 性能优化文档
-   - 发布说明文档
-
-2. **前端文档**：傅依琳
-   - 组件使用文档
-   - 前端开发指南
-   - 样式规范文档
-   - 前端测试文档
-
-3. **后端文档**：赵湄灵、王誉晗
-   - API接口文档
-   - 数据库设计文档
-   - 业务流程文档
-   - 测试用例文档
-
-4. **运维文档**：袁太仙
-   - 部署文档
-   - 监控文档
-   - 运维手册
-   - 应急预案
-
-### 11.5 版本发布流程
-
-1. **版本计划**
-   - 计划制定：靳磊
-   - 任务分配：各模块负责人
-   - 进度跟踪：全体成员
-   - 风险评估：靳磊
-
-2. **功能开发**
-   - 前端功能：傅依琳负责
-   - 后端功能：赵湄灵、王誉晗负责
-   - 运维支持：袁太仙负责
-   - 代码审查：相应负责人
-
-3. **测试验证**
-   - 单元测试：开发人员
-   - 集成测试：全体成员
-   - 性能测试：袁太仙
-   - 安全测试：赵湄灵
-
-4. **发布上线**
-   - 预发布：袁太仙
-   - 灰度发布：袁太仙
-   - 正式发布：袁太仙
-   - 监控跟踪：全体成员 
+### 3. 文档规范
+- 使用Markdown格式
+- 结构清晰
+- 示例具体
+- 链接有效 
